--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="mainPage">
-    <div id="text">
+    <div id="text" class="w3-container">
         
     </div>
 <script src="script.js"></script> 
