hopefully it works better???

--- a/invite.html
+++ b/invite.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="secondPage">
-<div class="w3-container">
+<div class="w3-content w3-container w3-padding-64" id="about">
     <p class="p1">Parker and Khadijah</p>
     <p class="p3">Would like to invite you to watch them "ditto"</p>
     <p class="p2" id="date">Friday October 13th, 2023</p>
