--- a/invite.html
+++ b/invite.html
@@ -13,7 +13,7 @@
     <p class="p3">Would like to invite you to watch them "ditto"</p>
     <p class="p2" id="date">Friday October 13th, 2023</p>
     <p class="p3">Waynesville, N.C.<br><br>
-    Exact address to be provided later<br><br>
+    Exact address to be provided later<br>
     Event to be followed by gambling and libations</p>
 </div>
 <script src="script.js"></script>
