--- a/invite.html
+++ b/invite.html
@@ -12,7 +12,7 @@
     <p class="p1">Parker and Khadijah</p>
     <p class="p3">Would like to invite you to watch them "ditto"</p>
     <p class="p2" id="date">Friday October 13th, 2023</p>
-    <p class="p3">Waynesville, N.C.<br><br>
+    <p class="p3">Waynesville, N.C.<br>
     Exact address to be provided later<br>
     Event to be followed by gambling and libations</p>
 </div>
