--- a/invite.html
+++ b/invite.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="secondPage">
-<div class="center">
+<div>
     <p class="p1">Parker and Khadijah</p>
     <p class="p3">Would like to invite you to watch them "ditto"</p>
     <p class="p2" id="date">Friday October 13th, 2023</p>
