--- a/invite.html
+++ b/invite.html
@@ -8,13 +8,29 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body class="secondPage">
-<div>
-    <p class="p1">Parker and Khadijah</p>
-    <p class="p3">Would like to invite you to watch them "ditto"</p>
-    <p class="p2" id="date">Friday October 13th, 2023</p>
-    <p class="p3">Waynesville, N.C.<br>
-    Exact address to be provided later<br>
-    Event to be followed by gambling and libations</p>
+<div class="container text-center">
+    <div class="row">
+        <div class="col-sm">
+        <p class="p1">Parker and Khadijah</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+        <p class="p3">Would like to invite you to watch them "ditto"</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+        <p class="p2" id="date">Friday October 13th, 2023</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm">
+        <p class="p3">Waynesville, N.C.<br>
+            Exact address to be provided later<br>
+            Event to be followed by gambling and libations</p>
+        </div>
+    </div>
 </div>
 <script src="script.js"></script>
 </body>
