--- a/invite.html
+++ b/invite.html
@@ -10,22 +10,22 @@
 <body class="secondPage">
 <div class="container text-center">
     <div class="row">
-        <div class="col-sm">
+        <div class="col-md">
         <p class="p1">Parker and Khadijah</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm">
+        <div class="col-md">
         <p class="p3">Would like to invite you to watch them "ditto"</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm">
+        <div class="col-md">
         <p class="p2" id="date">Friday October 13th, 2023</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm">
+        <div class="col-md">
         <p class="p3">Waynesville, N.C.<br>
             Exact address to be provided later<br>
             Event to be followed by gambling and libations</p>
