second line on page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body class="mainPage">
     <div id="text" class="col-md">
-        
+        <div id="text2" class="col-md">
+
+        </div>
     </div>
 <script src="script.js"></script> 
 </body>
