--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <link rel="icon" title="image/x-icon" href="./images/bitjason.png">
 </head>
 <body class="mainPage">
-    <h1 id="mainThing">Consider This Your Invitation</h1>
+    <h1 class="mainThing">Consider This Your Invitation</h1>
     <p></p>
     <p></p>
-    <p id="smallP">Click the page! Go on! Dare ya!</p>
+    <p class="smallP">Click the page! Go on! Dare ya!</p>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
