--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="mainPage">
     <h1>Consider This Your Invitation</h1>
     <br><br><br><br><br><br><br><br>
-    <p>Click the page! Go on! Dare ya!</p>
+    <p id="secondLine">Click the page! Go on! Dare ya!</p>
 <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
